--- a/en/playerView.yml
+++ b/en/playerView.yml
@@ -1,6 +1,7 @@
 gui:
   size: 54
-  name: "Auction house {Page}/{TotalPage}"
+  type: CHEST
+  name: "Auction House {Page}/{TotalPage}"
   title: "&eItem : &6{ItemName}"
   replaceTitle: true
   description:
@@ -152,7 +153,7 @@ block:
     title: "-"
     description: {}
   '45':
-    utility: expire
+    utility: expireGui
     material: CHEST_MINECART
     title: "&cCollect your expired items"
     description: {}
@@ -194,7 +195,7 @@ block:
     material: ARROW
     title: "&5Next Page"
     description:
-      - "&e Click here to go to the next page"
+      - "&eClick here to go to the next page"
     replacement:
       material: AIR
       title: "-"
@@ -205,9 +206,9 @@ block:
     title: "-"
     description: {}
   '52':
-    utility: player
+    utility: auctionGui
     material: NETHER_STAR
-    title: "&5Back to the auction house"
+    title: "&cBack to the auction house"
     description:
       - "&eClick here to return to the auction house"
   '53':
