--- a/en/expire.yml
+++ b/en/expire.yml
@@ -149,10 +149,11 @@ block:
   '43':
     utility: expire
   '44':
-    utility: barrier
-    material: GRAY_STAINED_GLASS_PANE
-    title: " "
-    description: {}
+    utility: player
+    material: NETHER_STAR
+    title: "&5My Items"
+    description:
+      - "&eClick here to see your items for sale"
   '45':
     utility: auctionGui
     material: CHEST
@@ -205,11 +206,12 @@ block:
       - "&eClick here to change filter"
       - "&eCurrent filter : {categoryDisplayName}"
   '52':
-    utility: player
-    material: NETHER_STAR
-    title: "&5My Items"
+    utility: sorting
+    material: BOOK
+    title: "&5Sort."
     description:
-      - "&eClick here to see your items for sale"
+      - "&eClick here to sort item"
+      - "&eCurrent sort : {sortDisplayName}"
   '53':
     utility: close
     material: BARRIER
